--- a/conf/app.ini
+++ b/conf/app.ini
@@ -143,7 +143,7 @@ MAX_FILES = 5
 [database]
 ; The database backend, either "postgres", "mysql" "sqlite3" or "mssql".
 ; You can connect to TiDB with MySQL protocol.
-TYPE = postgres
+TYPE = mysql
 HOST = 127.0.0.1:5432
 NAME = gogs
 USER = gogs
