--- a/conf/app.ini
+++ b/conf/app.ini
@@ -156,7 +156,7 @@ SSL_MODE = disable
 PATH = data/gogs.db
 ; The maximum open connections of the pool.
 MAX_OPEN_CONNS = 30
-; The maximum idle connections of the pool.
+; The maxmum idle connections of the pool.
 MAX_IDLE_CONNS = 30
 
 [security]
